LPD-76246 feat: provide delete, patch and copy methods for task definition api
