# modules/dxp/apps/ai-hub/ai-hub-rest-impl/rest-openapi.yaml
@@ -41,13 +41,30 @@ components:
             type: object
         TaskDefinition:
             properties:
+                actions:
+                    additionalProperties:
+                        additionalProperties:
+                            type: string
+                        type: object
+                    readOnly: true
+                    type: object
                 active:
                     type: boolean
                 description:
                     type: string
+                externalReferenceCode:
+                    readOnly: true
+                    type: string
+                id:
+                    format: int64
+                    readOnly: true
+                    type: integer
                 name:
                     type: string
+                title:
+                    type: string
                 version:
+                    readOnly: true
                     type: integer
             type: object
         Token:
@@ -65,7 +82,7 @@ components:
 info:
     description:
         "A Java client JAR is available for use with the group ID 'com.liferay', artifact ID
-        'com.liferay.ai.hub.rest.client', and version '1.0.4'."
+        'com.liferay.ai.hub.rest.client', and version '1.0.5'."
     license:
         name: Apache 2.0
         url: http://www.apache.org/licenses/LICENSE-2.0.html
@@ -150,6 +167,67 @@ paths:
                                 items:
                                     $ref: "#/components/schemas/TaskDefinition"
                                 type: array
+            tags: ["TaskDefinition"]
+    "/task-definitions/{taskDefinitionId}":
+        delete:
+            operationId: deleteTaskDefinition
+            parameters:
+                -   in: path
+                    name: taskDefinitionId
+                    required: true
+                    schema:
+                        format: int64
+                        type: integer
+            responses:
+                204:
+                    content:
+                        application/json: {}
+                        application/xml: {}
+            tags: ["TaskDefinition"]
+    "/task-definitions/{taskDefinitionId}/copy":
+        post:
+            operationId: postTaskDefinitionCopy
+            parameters:
+                -   in: path
+                    name: taskDefinitionId
+                    required: true
+                    schema:
+                        format: int64
+                        type: integer
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/TaskDefinition"
+                        application/xml:
+                            schema:
+                                $ref: "#/components/schemas/TaskDefinition"
+            tags: ["TaskDefinition"]
+    "/task-definitions/{taskDefinitionId}/update-active":
+        patch:
+            operationId: patchTaskDefinitionUpdateActive
+            parameters:
+                -   in: path
+                    name: taskDefinitionId
+                    required: true
+                    schema:
+                        format: int64
+                        type: integer
+                -   in: query
+                    name: active
+                    required: true
+                    schema:
+                        type: boolean
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/TaskDefinition"
+                        application/xml:
+                            schema:
+                                $ref: "#/components/schemas/TaskDefinition"
             tags: ["TaskDefinition"]
     "/tasks":
         post:
